Fix flexbox overflowing on IE

--- a/home.css
+++ b/home.css
@@ -40,6 +40,7 @@ body {
 
 .content-box {
   flex-grow: 1;
+  flex-basis: 0;
   min-width: 0;
 }
 
@@ -135,6 +136,7 @@ body {
     display: none;
     width: 0;
     flex-grow: 1;
+    flex-basis: 0;
   }
   #open-nav-button {
     display: block;
